test/types/range/cast-assign-init/illegal-assigns.5-1.good
illegal-assigns.chpl:11: error: assigning to a range with idxType uint(64) from a range with idxType color without an explicit cast
